updates for 2017 event

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class='content'>
         <h1 class='white'>Space + Science Hack Day New York</h1>
         <p>Calling all tinkerers, artists, scientists and passionate makers to spend 30 hours hacking science!</p>
-        <h2 class='white'>22-24th April 2016</h2>
+        <h2 class='white'>29-30th April 2016</h2>
         <h2 class='white'><a href='https://goo.gl/maps/dj7qRRjqMsR2'>CartoDB, 201 Moore St, Brooklyn, NY 11206</a> </h2>
 
           <div class='buttons'>
-            <a  class='button' href='https://docs.google.com/forms/d/1yAhPXElYG0LwWwzMpjawub6qgP7Q6NRNgBf8Mfjfcsw/viewform'>Get Notified</a>
-            <a  class='button' href='https://www.eventbrite.com/e/science-hack-day-and-space-apps-challenge-nyc-tickets-23197414090'>Register</a>
+              <a  class='button' href='https://docs.google.com/forms/d/e/1FAIpQLSfJtn2D5MPzH0-UxlvwN2rFp-eMjHs8oHWzHr_uqKDUwsAQRw/viewform?usp=sf_link'>Notified</a>
+
           </div>
           <br>
           <div class='social'>
@@ -52,16 +52,15 @@
         <iframe width=90% style="min-height:500px" src="https://www.youtube.com/embed/Dzb_QCYxi3I" frameborder="0" allowfullscreen></iframe>
     </section>
     <section class='space about'>
-      <h2>What is Space Apps 2016?</h2>
-      <p>NASA is on a mission to foster innovation around challenges affecting us at home and in space. Driven by that mission, <a href="https://2016.spaceappschallenge.org/about">Space Apps</a> is a 48-hour annual hackathon coordinated by hundreds of remote teams and site-organizers. The goal is to inspire citizen teamwork for positive change across every skill level and discipline, with a solid focus on space and science.</p>
-      <p>We thought it would partner well with Science Hack Day, and wanted to further support Brooklyn nerds who might not be able to make it to the <a href="https://2016.spaceappschallenge.org/locations/new-york-ny-usa">Manhattan Space Apps</a> event with our awesome Brooklyn <a href="https://2016.spaceappschallenge.org/locations/brooklyn-ny-usa">Data Bootcamp and Hack Day in Bushwick</a>.</p>
+      <h2>What is Space Apps 2017?</h2>
+      <p>NASA is on a mission to foster innovation around challenges affecting us at home and in space. Driven by that mission, <a href="https://2017.spaceappschallenge.org/about">Space Apps</a> is a 48-hour annual hackathon coordinated by hundreds of remote teams and site-organizers. The goal is to inspire citizen teamwork for positive change across every skill level and discipline, with a solid focus on space and science.</p>
+      <p>We thought it would partner well with Science Hack Day, and wanted to further support Brooklyn nerds who might not be able to make it to the <a href="https://2017.spaceappschallenge.org/locations/new-york-ny-usa">Manhattan Space Apps</a> event with our awesome Brooklyn <a href="https://2017.spaceappschallenge.org/locations/brooklyn-ny-usa">Data Bootcamp and Hack Day in Bushwick</a>.</p>
     </section>
 
     <section class="topics">
       <h2>Themes</h2>
       <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon.</p>
-      <a href="https://2016.spaceappschallenge.org/challenges"><img src='img/challenges.png'></a>
-
+        <h3>Comming Soon</h3>
       <h2>Resources</h2>
       <div class='sched'>
         <a  alt="Registration" href='https://www.eventbrite.com/e/science-hack-day-and-space-apps-challenge-nyc-tickets-23197414090'><i class="fa fa-calendar"></i></a>
@@ -69,11 +68,17 @@
         <a  alt="Conduct" href='http://confcodeofconduct.com/'><i class="fa fa-life-ring"></i></a>
       </div>
     </section>
+    
+    <section id='signup' class='signup'>
+        <h1>Sign up</h1>
+        <p>Registration isn't open just yet but <a href='https://docs.google.com/forms/d/e/1FAIpQLSfJtn2D5MPzH0-UxlvwN2rFp-eMjHs8oHWzHr_uqKDUwsAQRw/viewform?usp=sf_link'>register</a> your interest and we will let you know when you can get tickets</p>
+        
+    </section>
 
     <section class='sponsors'>
       <h2>Sponsors</h2>
-      <img src='img/TRouters.png'>
-      <img src='img/MSL.png'>
+      <a target="_blank" href='http://science.mozilla.org'><img src='img/MSL.png' /></a>
+      <a target="_blank" href='http://carto.com'> <img style='height:auto' src='img/Logo-Carto.png' /></a>
       <img src='img/space-app-challenge.png'>
       <p>If you would like to sponsor the event, or bring down equipent or supplies, run a workshop or generally get involved fill out the form <a href='https://docs.google.com/forms/d/1WHp2Fr0PFKyqUCtet3G35Na7p841htCRw2hvnXZZaxM/viewform'>here.</a></p>
     </section>
