update typo and date for 2017

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class='content'>
         <h1 class='white'>Space + Science Hack Day New York</h1>
         <p>Calling all tinkerers, artists, scientists and passionate makers to spend 30 hours hacking science!</p>
-        <h2 class='white'>29-30th April 2016</h2>
+        <h2 class='white'>29-30th April 2017</h2>
         <h2 class='white'><a href='https://goo.gl/maps/dj7qRRjqMsR2'>CartoDB, 201 Moore St, Brooklyn, NY 11206</a> </h2>
 
           <div class='buttons'>
@@ -60,7 +60,7 @@
     <section class="topics">
       <h2>Themes</h2>
       <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon.</p>
-        <h3>Comming Soon</h3>
+        <h3>Coming Soon</h3>
       <h2>Resources</h2>
       <div class='sched'>
         <a  alt="Registration" href='https://www.eventbrite.com/e/science-hack-day-and-space-apps-challenge-nyc-tickets-23197414090'><i class="fa fa-calendar"></i></a>
