update carto logo

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class='sponsors'>
       <h2>Sponsors</h2>
       <a target="_blank" href='http://science.mozilla.org'><img src='img/MSL.png' /></a>
-      <a target="_blank" href='http://carto.com'> <img style='height:auto' src='img/Logo-Carto.png' /></a>
+      <a target="_blank" href='http://carto.com'> <img style='height:55px; width:120px' src='img/logo-carto.png' /></a>
       <img src='img/space-app-challenge.png'>
       <p>If you would like to sponsor the event, or bring down equipent or supplies, run a workshop or generally get involved fill out the form <a href='https://docs.google.com/forms/d/1WHp2Fr0PFKyqUCtet3G35Na7p841htCRw2hvnXZZaxM/viewform'>here.</a></p>
     </section>
