update button to get notified

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class='white'><a href='https://goo.gl/maps/dj7qRRjqMsR2'>CartoDB, 201 Moore St, Brooklyn, NY 11206</a> </h2>
 
           <div class='buttons'>
-              <a  class='button' href='https://docs.google.com/forms/d/e/1FAIpQLSfJtn2D5MPzH0-UxlvwN2rFp-eMjHs8oHWzHr_uqKDUwsAQRw/viewform?usp=sf_link'>Notified</a>
+              <a  class='button' href='https://docs.google.com/forms/d/e/1FAIpQLSfJtn2D5MPzH0-UxlvwN2rFp-eMjHs8oHWzHr_uqKDUwsAQRw/viewform?usp=sf_link'>Get Notified</a>
 
           </div>
           <br>
