--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Science Hack Day NY</title>
+    <title>Space Apps Brooklyn</title>
 
     <!-- Bootstrap -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -24,9 +24,9 @@
 
       <img src='img/shd-moon.png' />
       <div class='content'>
-        <h1 class='white'>Space + Science Hack Day New York</h1>
+        <h1 class='white'>Space Apps 2017 Brooklyn</h1>
         <p>Calling all tinkerers, artists, scientists and passionate makers to spend 30 hours hacking science!</p>
-        <h2 class='white'>29-30th April 2017</h2>
+        <h2 class='white'>28-30th April 2017</h2>
         <h2 class='white'><a href='https://goo.gl/maps/dj7qRRjqMsR2'>CartoDB, 201 Moore St, Brooklyn, NY 11206</a> </h2>
 
           <div class='buttons'>
@@ -43,24 +43,23 @@
 
     </section>
 
-    <section class='main'>
-      <h2>What is Science Hack Day?</h2>
-      <p>Science Hack Day brings together designers, developers, scientists, and other geeks in the same physical space for a brief but intense period of collaboration, hacking and building cool stuff. The mission of Science Hack Day is to get excited and make things with science! 
-      By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results.
-      To get a feel for the energy and passion of the event check out this video from Science Hack Day San Francisco 2014.</p>
-
-        <iframe width=90% style="min-height:500px" src="https://www.youtube.com/embed/Dzb_QCYxi3I" frameborder="0" allowfullscreen></iframe>
-    </section>
     <section class='space about'>
       <h2>What is Space Apps 2017?</h2>
       <p>NASA is on a mission to foster innovation around challenges affecting us at home and in space. Driven by that mission, <a href="https://2017.spaceappschallenge.org/about">Space Apps</a> is a 48-hour annual hackathon coordinated by hundreds of remote teams and site-organizers. The goal is to inspire citizen teamwork for positive change across every skill level and discipline, with a solid focus on space and science.</p>
-      <p>We thought it would partner well with Science Hack Day, and wanted to further support Brooklyn nerds who might not be able to make it to the <a href="https://2017.spaceappschallenge.org/locations/new-york-ny-usa">Manhattan Space Apps</a> event with our awesome Brooklyn <a href="https://2017.spaceappschallenge.org/locations/brooklyn-ny-usa">Data Bootcamp and Hack Day in Bushwick</a>.</p>
+      <p>We'll also be hosting Science Hack Day in August, and wanted to further support Brooklyn nerds who might not be able to make it to the <a href="https://2017.spaceappschallenge.org/locations/new-york-ny-usa">Manhattan Space Apps</a> event with our awesome Brooklyn <a href="https://2017.spaceappschallenge.org/locations/brooklyn-ny-usa">Data Bootcamp and Hack Day in Bushwick</a>.</p>
     </section>
 
     <section class="topics">
-      <h2>Themes</h2>
-      <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon.</p>
-        <h3>Coming Soon</h3>
+      <h2>Categories - Earth</h2>
+      <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon. The theme for Space Apps 2017 is Earth, you can check out the <a href="https://2017.spaceappschallenge.org/blog/sneak-peak-space-apps-2017-challenge-categories" target="_blank">challene categories</a> here and listed below!</p>
+        <img src="img/challenges.png" style="width:100%">
+        <ol>
+          <h3><li><strong>The Earth and Us</strong></h3> Challenges in this category will ask you to combine NASA Earth Science data with sociological and economic information to generate new understanding and perspectives on human-environment interactions. </li>
+          <h3><li><strong>Planetary Blues</strong></h3> Challenges in this category will ask you to analyze and visualize NASA’s data on the hydrosphere (surface and groundwater, etc.) and the cryosphere (sea ice and ice sheets, etc.).</li>
+          <h3><li><strong>Warning! Danger Ahead!</strong></h3>Challenges in this category will ask you to analyze NASA data to assist in monitoring natural disasters and phenomena associated with health risks, and to assess their impacts on life and property. </li>
+          <h3><li><strong>Our Ecological Neighborhood</strong></h3>Challenges in this category will ask you to use NASA Earth Science data to study ecological systems and generate solutions to understand life here on Earth better.</li>
+          <h3><li><strong>Ideate and Create!</strong></h3>Challenges in this category will ask you to interpret NASA Earth Science data creatively and design new means to experience NASA Earth Science data and technologies. </li>
+        </ol>
       <h2>Resources</h2>
       <div class='sched'>
         <a  alt="Registration" href='https://www.eventbrite.com/e/science-hack-day-and-space-apps-challenge-nyc-tickets-23197414090'><i class="fa fa-calendar"></i></a>
