add registration link

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <section id='signup' class='signup'>
         <h1>Sign up</h1>
         <p>Registration isn't open just yet but <a href='https://docs.google.com/forms/d/e/1FAIpQLSfJtn2D5MPzH0-UxlvwN2rFp-eMjHs8oHWzHr_uqKDUwsAQRw/viewform?usp=sf_link'>register</a> your interest and we will let you know when you can get tickets</p>
+        <p>Registration officially opens the first week in April, and you'll be able to register on our <a href="https://2017.spaceappschallenge.org/locations/brooklyn-ny/" target="_blank">Space Apps site here</a>.</p>
         
     </section>
 
