updated challenges on website

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="topics">
       <h2>Categories - Earth</h2>
-      <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon. The theme for Space Apps 2017 is Earth, you can check out the <a href="https://2017.spaceappschallenge.org/blog/sneak-peak-space-apps-2017-challenge-categories" target="_blank">challene categories</a> here and listed below!</p>
+      <p>We invite anyone interested in science to attend and hack on a project that suits their interest, we'll pitch and select teams on the first day of the hackathon. The theme for Space Apps 2017 is Earth, you can check out the <a href="https://2017.spaceappschallenge.org/challenges/?mc_cid=5851e0df93&mc_eid=ea8f78ed84" target="_blank">challene categories</a> here and listed below!</p>
         <img src="img/challenges.png" style="width:100%">
         <ol>
           <h3><li><strong>The Earth and Us</strong></h3> Challenges in this category will ask you to combine NASA Earth Science data with sociological and economic information to generate new understanding and perspectives on human-environment interactions. </li>
